Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Home') %>
-
-<h1>Sherman St. Hill</h1>
-<p>This is the home page for my portfolio site.</p>
+<div class="center hero-unit">
+	<h1>Sherman St. Hill Portfolio</h1>
+	<h2>This is the home page for my portfolio site.</h2>
+</div>
