--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,12 +4,13 @@
             <%= link_to image_tag("logo.png", alt: "Sherman St. Hill Portfolio", id: "logo"), root_path %>
             <nav class="top-nav">
                 <ul>
-                    <li><%= link_to "home",	root_path %></li>
-                    <li><%= link_to "about me",	about_path %></li>
-                    <li><%= link_to "resume", resume_path %></li>
-                    <li><%= link_to "projects",	projects_path %></li>
-                    <li><%= link_to "contact me", contact_path %></li>
+                    <%= nav_link "home", root_path %>
+                    <%= nav_link "about me", about_path %>
+                    <%= nav_link "resume", resume_path %>
+                    <%= nav_link "projects", projects_path %>
+                    <%= nav_link "contact me", contact_path %>
                 </ul>
+                <!-- <%= nav_link "about me", about_path %> -->
             </nav>
         </div> <!-- container -->
     </div>
