--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<div id="footer">
+<div class="footer-bar">
   <div class="container">
-    <p class="muted">Copyright © 2013 Sherman St. Hill</p>
+    <p class="muted">Copyright © 2013 Sherman St. Hill. All rights reserved.</p>
   </div><!-- container -->
-</div>
+</div><!-- footer-bar -->
