--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center hero-unit">
+<div class="center jumbotron">
 	<h1>Sherman St. Hill Portfolio</h1>
 	<h2>This is the home page for my portfolio site.</h2>
 </div>
