--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,24 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-    <div class="navbar-inner">
-        <div class="container">
-            <%= link_to image_tag("logo.png", alt: "Sherman St. Hill Portfolio", id: "logo"), root_path %>
-            <nav class="top-nav">
-                <ul>
-                    <%= nav_link "home", root_path %>
-                    <%= nav_link "about me", about_path %>
-                    <%= nav_link "resume", resume_path %>
-                    <%= nav_link "projects", projects_path %>
-                    <%= nav_link "contact me", contact_path %>
-                </ul>
-                <!-- <%= nav_link "about me", about_path %> -->
-            </nav>
-        </div> <!-- container -->
-    </div>
-</header><!-- /header -->
+<nav class="navbar navbar-fixed-top navbar-inverse navbar-default" role="navigation">
+<div class="container">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <%= link_to image_tag("logo.png", alt: "Sherman St. Hill Portfolio", id: "logo"), root_path %>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav navbar-right">
+      <%= nav_link "home", root_path %>
+      <%= nav_link "about me", about_path %>
+      <%= nav_link "resume", resume_path %>
+      <%= nav_link "projects", projects_path %>
+      <%= nav_link "contact me", contact_path %>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+  </div><!-- container -->
+</nav>
