--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title><%= full_title(yield(:title)) %></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<%= favicon_link_tag 'favicon.ico' %>
 	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	<%= csrf_meta_tags %>
@@ -9,7 +11,7 @@
 </head>
 <body>
 	<%= render 'layouts/header' %>
-	<div class="container">
+	<div class="container wrapper">
 		<%= yield %>
 	</div>
 	<%= render 'layouts/footer' %>
