Finish making form auto-adjustable

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,10 +76,10 @@ header {
 	margin-top: 25px;
 	li {
 		float: right;
-		margin: 0 -15px 0 0;
+		margin: 0 -15px 0 0px;
 		a {
 			color: #999;
-			font-size: 1.1em;
+			font-size: 1.25em !important;
 			font-weight: normal;
 			letter-spacing: -1px;
 			&:hover {
@@ -125,52 +125,52 @@ header {
 }
 
 /* contact form */
-.form-group {
-	margin-bottom: 20px;
-	label {
-		margin-bottom: -15px;
-	}
-	input {
-		-webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
-		box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
-		-webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-		border: 1px solid #CCC;
-		border-radius: 4px;
-		color: #555;
-		display: block;
-		font-size: 14px;
-		padding: 6px 12px;
-		transition:border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-		vertical-align:middle;
-		width:400px;
-		&:focus{
-			outline: none;
-			-webkit-box-shadow: 0 0 5px #34D0B6;
-			box-shadow: 0 0 5px #34D0B6;
-		}
-	}
+// .form-group {
+// 	margin-bottom: 20px;
+// 	label {
+// 		margin-bottom: -15px;
+// 	}
+// 	input {
+// 		-webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
+// 		box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
+// 		-webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+// 		border: 1px solid #CCC;
+// 		border-radius: 4px;
+// 		color: #555;
+// 		display: block;
+// 		font-size: 14px;
+// 		padding: 6px 12px;
+// 		transition:border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+// 		vertical-align:middle;
+// 		width:400px;
+// 		&:focus{
+// 			outline: none;
+// 			-webkit-box-shadow: 0 0 5px #34D0B6;
+// 			box-shadow: 0 0 5px #34D0B6;
+// 		}
+// 	}
 
-	textarea {
-		-webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
-		box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
-		-webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-		border: 1px solid #CCC;
-		border-radius: 4px;
-		color: #555;
-		display: block;
-		font-size: 14px;
-		padding: 6px 12px;
-		transition:border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-		vertical-align:middle;
-		width:400px;
-		height: 200px;
-		&:focus{
-			outline: none;
-			-webkit-box-shadow: 0 0 5px #34D0B6;
-			box-shadow: 0 0 5px #34D0B6;
-		}
-	}
-}
+// 	textarea {
+// 		-webkit-box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
+// 		box-shadow: rgba(0, 0, 0, 0.0745098) 0 1px 1px inset;
+// 		-webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+// 		border: 1px solid #CCC;
+// 		border-radius: 4px;
+// 		color: #555;
+// 		display: block;
+// 		font-size: 14px;
+// 		padding: 6px 12px;
+// 		transition:border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+// 		vertical-align:middle;
+// 		width:400px;
+// 		height: 200px;
+// 		&:focus{
+// 			outline: none;
+// 			-webkit-box-shadow: 0 0 5px #34D0B6;
+// 			box-shadow: 0 0 5px #34D0B6;
+// 		}
+// 	}
+// }
 
 .form-submit input {
 	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -201,30 +201,6 @@ header {
 		background:-moz-linear-gradient( center top, #FF6800 5%, #FF8D40 100% );
 		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF6800', endColorstr='#FF8D40');
 		background-color:#FF6800;
-	}
-}
-
-.error_messages {
-	color: #FF0000;
-	h3 {
-		font-size: 0.9em;
-		font-weight: normal;
-		background-color:#FFCCFF;
-		background-repeat:repeat no-repeat;
-		border-color:#FFCCFF;
-		border-style:solid;
-		border-radius:4px;
-		border-width:1px;
-		box-shadow:rgba(255, 255, 255, 0.247059) 0 1px 0 inset;
-		color:#990033;
-		padding:12px 15px;
-		position:relative;
-		text-shadow:rgba(255, 255, 255, 0.498039) 0 1px 0;
-		width: 500px;
-	}
-	li {
-		font-size: 0.9em;
-		padding: 2px;
 	}
 }
 
