--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,9 +1,9 @@
-<% if object.errors.any? %>
+<% if @inquiry.errors.any? %>
 	<div class="alert alert-warning alert-dismissal">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-		<h3><%= pluralize(object.errors.count, "error") %> preventing your email from being sent:</h3>
+		<h3><%= pluralize(@inquiry.errors.count, "error") %> preventing your email from being sent:</h3>
 		<ul>
-			<% object.errors.full_messages.each do |msg| %>
+			<% @inquiry.errors.full_messages.each do |msg| %>
 			<li><%= msg %></li>
 			<% end %>
 		</ul>
