--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,33 +1,50 @@
 <%= form_for (@inquiry) do |f| %>
-	<%= render 'shared/error_messages', object: @inquiry %>
+<%= render 'shared/error_messages', object: @inquiry %>
 
-	<fieldset>
+<fieldset>
 
-		<legend>Let's Network</legend>
-		<div class="form-group">
-			<%= f.label :name %><br>
-			<%= f.text_field :name %>
+	<legend>Let's Network</legend>
+	<div class="form-group clearfix">
+		<%= f.label :name %>
+		<div class="row">
+			<div class="col-lg-4">
+				<%= f.text_field :name, :class => "form-control" %><br>
+			</div>
 		</div>
+	</div>
 
-		<div class="form-group">
-			<%= f.label :email %><br>
-			<%= f.text_field :email %>
+	<div class="form-group clearfix">
+		<%= f.label :email %>
+		<div class="row">
+			<div class="col-lg-4">
+				<%= f.text_field :email, :class => "form-control" %><br>
+			</div>
 		</div>
+	</div>
 
-		<div class="form-group">
-			<%= f.label :subject %><br>
-			<%= f.text_field :subject %>
+	<div class="form-group clearfix">
+		<%= f.label :subject %>
+		<div class="row">
+			<div class="col-lg-4">
+				<%= f.text_field :subject, :class => "form-control" %><br>
+			</div>
 		</div>
+	</div>
 
-		<div class="form-group">
-			<%= f.label :message %><br>
-			<%= f.text_area :body %>
+	<div class="form-group clearfix">
+		<%= f.label :message %>
+		<div class="row">
+			<div class="col-lg-4">
+				<%= f.text_area :message, :class => "form-control", :rows => "6" %><br>
+			</div>
 		</div>
+	</div>
 
-		<div class="form-submit">
-			<%= f.submit "Send" %>
-		</div>
+	<div class="form-submit">
+		<%= f.submit "Send", :class => "btn btn-primary btn-lg" %>
+	</div>
 
-	</fieldset>
+</fieldset>
 
 <% end %>
+</div>
