--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -40,6 +40,10 @@
 		</div>
 	</div>
 
+	<div class="form-group clearfix">
+		<%= recaptcha_tags %>
+	</div>
+
 	<div class="form-submit">
 		<%= f.submit "Send", :class => "btn btn-primary btn-lg" %>
 	</div>
