--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -3,7 +3,7 @@
 
 <fieldset>
 
-	<legend>Let's Network</legend>
+	<legend>Let's Network</legend><br>
 	<div class="form-group clearfix">
 		<%= f.label :name %>
 		<div class="row">
@@ -35,13 +35,13 @@
 		<%= f.label :message %>
 		<div class="row">
 			<div class="col-lg-4">
-				<%= f.text_area :message, :class => "form-control", :rows => "6" %><br>
+				<%= f.text_area :message, :class => "form-control", :rows => "6" %>
 			</div>
 		</div>
 	</div>
 
-	<div class="form-group clearfix">
-		<%= recaptcha_tags %>
+	<div>
+		<%= render 'layouts/recaptcha' %><br>
 	</div>
 
 	<div class="form-submit">
