--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -176,6 +176,7 @@ header {
 
 .recaptcha_custom {
 	max-width: 350px;
+	border-radius: 4px;
 	padding: 10px;
 	-webkit-box-shadow: 4px 0px 13px -2px rgba(148,146,148,1);
 	-moz-box-shadow: 4px 0px 13px -2px rgba(148,146,148,1);
