--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,12 @@
 
 	<%= render 'layouts/header' %>
 	<div class="container wrapper">
+		<% flash.each do |key, value| %>
+			<div class="alert alert-<%= key %> alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+				<%= value %>
+			</div>
+		<% end %>
 		<%= yield %>
 	</div>
 	<%= render 'layouts/footer' %>
