--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,14 @@
 	<%= render 'layouts/header' %>
 	<div class="container wrapper">
 		<% flash.each do |key, value| %>
-			<div class="alert alert-<%= key %> alert-dismissable">
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				<%= value %>
+		<div class="row">
+			<div class="col-lg-8">
+				<div class="alert alert-<%= key %> alert-dismissable">
+					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+					<%= value %>
+				</div>
 			</div>
+		</div>
 		<% end %>
 		<%= yield %>
 	</div>
