--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,15 @@
 <% if @inquiry.errors.any? %>
-	<div class="alert alert-warning alert-dismissal">
-		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-		<h3><%= pluralize(@inquiry.errors.count, "error") %> preventing your email from being sent:</h3>
-		<ul>
-			<% @inquiry.errors.full_messages.each do |msg| %>
-			<li><%= msg %></li>
-			<% end %>
-		</ul>
+<div class="row">
+<div class="col-lg-8">
+		<div class="alert alert-danger alert-dismissal">
+			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+			<h3><%= pluralize(@inquiry.errors.count, "error") %> preventing your email from being sent:</h3>
+			<ul>
+				<% @inquiry.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+				<% end %>
+			</ul>
+		</div>
 	</div>
+</div>
 <% end %>
