--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,10 @@
 <% provide(:title, 'About Me') %>
 
 <h1>About Me</h1>
-<p>This is the home page for my portfolio site.</p>
+<p>Lorem ipsum dolor sit amet, cu vim dignissim evertitur. Vitae virtute dolores an ius, ad erat tritani duo. Mazim utamur no duo, ius an probo deterruisset. Ex nam modus voluptatum conclusionemque, te eum assum molestiae.
+
+Pri graece gubergren eu. Iuvaret liberavisse ei pri. Eu vix nibh malorum, at augue maiestatis pri. Homero vivendo cu mel, latine denique atomorum nam in, sed solum dicat docendi an.
+
+Tale ornatus erroribus ne his, ei noster instructior pri. Vel ut iudico appellantur, ancillae perpetua vim ex. Vide etiam inciderint vel ei. Vim commodo appetere fabellas ne, sea at vide referrentur voluptatibus. Impetus bonorum ex sea, debet laoreet tibique ea has, an sonet accusata pro.
+
+Sea et tota denique gloriatur, cum cu maiorum philosophia, et nam nostro maluisset molestiae. Cum omnis illud malorum ei. Pro eu mundi appetere voluptatibus. Eu sit mollis admodum, vel agam urbanitas ea.</p>
