--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,5 @@
 //=======================================================================================
 @import "bootstrap";
-@import "fonts";
 //=======================================================================================
 
 /* universal */
@@ -205,4 +204,16 @@ header {
 /* container */
 .wrapper {
 	margin-bottom: 100px;
+}
+
+/* @font-face declarations */
+@font-face {
+	font-family: 'LeagueGothic';
+	src: font-url('/assets/leaguegothic-regular.eot'); /* IE9 Compat Modes */
+	src: font-url('/assets/leaguegothic-regular.eot?#iefix') format('embedded-opentype'), 
+		font-url('/assets/leaguegothic-regular.woff') format('woff'),
+		font-url('/assets/leaguegothic-regular.ttf')  format('truetype'),
+		font-url('/assets/leaguegothic-regular.svg') format('svg'); /* Legacy iOS */
+	font-weight: normal;
+	font-style: normal;
 }
