--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -209,11 +209,11 @@ header {
 /* @font-face declarations */
 @font-face {
 	font-family: 'LeagueGothic';
-	src: font-url('/assets/leaguegothic-regular.eot'); /* IE9 Compat Modes */
-	src: font-url('/assets/leaguegothic-regular.eot?#iefix') format('embedded-opentype'), 
-		font-url('/assets/leaguegothic-regular.woff') format('woff'),
-		font-url('/assets/leaguegothic-regular.ttf')  format('truetype'),
-		font-url('/assets/leaguegothic-regular.svg') format('svg'); /* Legacy iOS */
+	src: url('/assets/leaguegothic-regular.eot'); /* IE9 Compat Modes */
+	src: url('/assets/leaguegothic-regular.eot?#iefix') format('embedded-opentype'), 
+		url('/assets/leaguegothic-regular.woff') format('woff'),
+		url('/assets/leaguegothic-regular.ttf')  format('truetype'),
+		url('/assets/leaguegothic-regular.svg') format('svg'); /* Legacy iOS */
 	font-weight: normal;
 	font-style: normal;
 }
