Remove import in custom.css.scss

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,13 +1,13 @@
-// @font-face {
-// 	font-family: 'LeagueGothic';
-// 	src: font-url('/assets/leaguegothic-regular.eot'); /* IE9 Compat Modes */
-// 	src: font-url('/assets/leaguegothic-regular.eot?#iefix') format('embedded-opentype'), 
-// 		font-url('/assets/leaguegothic-regular.woff') format('woff'),
-// 		font-url('/assets/leaguegothic-regular.ttf')  format('truetype'),
-// 		font-url('/assets/leaguegothic-regular.svg') format('svg'); /* Legacy iOS */
-// 	font-weight: normal;
-// 	font-style: normal;
-// }
+@font-face {
+	font-family: 'LeagueGothic';
+	src: font-url('/assets/leaguegothic-regular.eot'); /* IE9 Compat Modes */
+	src: font-url('/assets/leaguegothic-regular.eot?#iefix') format('embedded-opentype'), 
+		font-url('/assets/leaguegothic-regular.woff') format('woff'),
+		font-url('/assets/leaguegothic-regular.ttf')  format('truetype'),
+		font-url('/assets/leaguegothic-regular.svg') format('svg'); /* Legacy iOS */
+	font-weight: normal;
+	font-style: normal;
+}
 
 // @font-face {
 // 	font-family: 'LeagueGothicItalic';
