--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 //=======================================================================================
 @import "bootstrap";
+@import "fonts";
 //=======================================================================================
 
 /* universal */
