--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,5 @@
 //=======================================================================================
 @import "bootstrap";
-@import "fonts";
 //=======================================================================================
 
 /* universal */
@@ -25,7 +24,8 @@ textarea {
 	text-align: center;
 	h1 {
 		margin-bottom: 5px;	
-		font-family: 'LeagueGothic' !important;
+		font-family: 'Oswald', sans-serif !important;
+		font-weight: bold;
 		font-size: 3em !important;
 		letter-spacing: -2px;
 		margin-bottom: 30px;
@@ -40,9 +40,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	
+	font-family: 'Oswald', sans-serif !important;
 	font-size: 4em !important;
-
 }
 
 h2 {
