--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<%= favicon_link_tag 'favicon.ico' %>
 	<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
 	<%= stylesheet_link_tag "application", 'https://fonts.googleapis.com/css?family=Abel', :media => "all" %>
+	<%= stylesheet_link_tag "application", 'http://fonts.googleapis.com/css?family=Oswald:400,700,300', :media => "all" %>
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	<%= csrf_meta_tags %>
 	
