--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,15 @@
 <div class="footer-bar">
-  <div class="container">
-    <p class="muted">Copyright © 2013 Sherman St. Hill. All rights reserved.</p>
-  </div><!-- container -->
+	<div class="container social-media-bar center">
+		<section id="set-8">
+			<div class="hi-icon-wrap hi-icon-effect-8">
+				<%= link_to image_tag("email_icon.png"), contact_path, :class => "hi-icon" %>
+				<%= link_to image_tag("facebook_icon.png"), "https://www.facebook.com/sherman.sthill", :target => "_blank", :class => "hi-icon" %>
+				<%= link_to image_tag("linkedin_icon.png"), "http://www.linkedin.com/in/shermansthill/", :target => "_blank", :class => "hi-icon" %>
+				<%= link_to image_tag("googleplus_icon.png"), "https://plus.google.com/+ShermanStHill", :target => "_blank", :class => "hi-icon" %>		
+			</div>
+		</section>
+	</div><!-- container -->
+	<div class="container credits">
+		<p class="muted">Copyright © 2014 Sherman St. Hill. All rights reserved.</p>
+	</div><!-- container -->
 </div><!-- footer-bar -->
