--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,9 @@
 		<section id="set-8">
 			<div class="hi-icon-wrap hi-icon-effect-8">
 				<%= link_to image_tag("email_icon.png"), contact_path, :class => "hi-icon" %>
-				<%= link_to image_tag("facebook_icon.png"), "https://www.facebook.com/sherman.sthill", :target => "_blank", :class => "hi-icon" %>
-				<%= link_to image_tag("linkedin_icon.png"), "http://www.linkedin.com/in/shermansthill/", :target => "_blank", :class => "hi-icon" %>
-				<%= link_to image_tag("googleplus_icon.png"), "https://plus.google.com/+ShermanStHill", :target => "_blank", :class => "hi-icon" %>		
+				<%= link_to image_tag("facebook_icon.png"), "https://www.facebook.com/sherman.sthill", :target => "_blank", :class => "hi-icon facebook_icon" %>
+				<%= link_to image_tag("linkedin_icon.png"), "http://www.linkedin.com/in/shermansthill/", :target => "_blank", :class => "hi-icon linkedin_icon" %>
+				<%= link_to image_tag("googleplus_icon.png"), "https://plus.google.com/+ShermanStHill", :target => "_blank", :class => "hi-icon googleplus_icon" %>		
 			</div>
 		</section>
 	</div><!-- container -->
