--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<div class="center jumbotron">
-	<h1>Sherman St. Hill Portfolio</h1>
-	<h2>This is the home page for my portfolio site.</h2>
+<div class="home_page">
+	<div class="col-xs-12 col-md-4 profile_pic">
+	<%= image_tag("downtown.png", :alt => "Sherman St Hill", :class => "img-responsive img-thumbnail")  %>
+	</div>
+	<div class="col-xs-12 col-sm-6 col-md-8">
+		<div class="center jumbotron">
+			<h1>Sherman St. Hill</h1>
+			<h2>I am a start-up web developer who prides on simplistic design....</h2>
+		</div>
+	</div>
 </div>
