--- a/app/views/static_pages/resume.html.erb
+++ b/app/views/static_pages/resume.html.erb
@@ -1,10 +1,136 @@
 <% provide(:title, 'Resume') %>
 
-<h1>Resume</h1>
-<p>Lorem ipsum dolor sit amet, cu vim dignissim evertitur. Vitae virtute dolores an ius, ad erat tritani duo. Mazim utamur no duo, ius an probo deterruisset. Ex nam modus voluptatum conclusionemque, te eum assum molestiae.
+<div class="resume_page">
+	<h1 class=".hidden-print">Resume</h1>
 
-Pri graece gubergren eu. Iuvaret liberavisse ei pri. Eu vix nibh malorum, at augue maiestatis pri. Homero vivendo cu mel, latine denique atomorum nam in, sed solum dicat docendi an.
+	<div class="col-xs-8 col-md-3 resume_header">
+		<address>
+			<h3><strong>Sherman St. Hill</strong></h3>
+			scsthill@gmail.com
+			773.717.2290<br>
+		</address>
+	</div>
 
-Tale ornatus erroribus ne his, ei noster instructior pri. Vel ut iudico appellantur, ancillae perpetua vim ex. Vide etiam inciderint vel ei. Vim commodo appetere fabellas ne, sea at vide referrentur voluptatibus. Impetus bonorum ex sea, debet laoreet tibique ea has, an sonet accusata pro.
+	<div class="col-xs-12 col-sm-12 col-md-9 resume_content">
+		<div class="panel-group" id="accordion">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" href="#collapseOne">
+							Objective
+						</a>
+					</h4>
+				</div>
+				<div id="collapseOne" class="panel-collapse in">
+					<div class="panel-body">
+						A highly motivated, well versed and determined individual with a thirst for knowledge is seeking a full time position to utilize my technical prowess to positively impact your company.
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" href="#collapseTwo">
+							Education
+						</a>
+					</h4>
+				</div>
+				<div id="collapseTwo" class="panel-collapse collapse">
+					<div class="panel-body">
+						<strong>Graduated May 2013</strong><br>
+						Illinois Institute of Technology, School of Applied Technology, Chicago, IL<br>
+						<b>Bachelor of Science in Information Technology and Management</b><br><br>
+						
+						<strong>Graduated May 2009</strong><br>
+						Sir Arthur Lewis Community College, Department of Technical Education and Management Studies, Castries,
+						Saint Lucia<br>
+						<b>Associate of Applied Science in Electronics Engineering</b><br><br>
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" href="#collapseThree">
+							Professional Experience
+						</a>
+					</h4>
+				</div>
+				<div id="collapseThree" class="panel-collapse collapse">
+					<div class="panel-body">
+						<u>dbHMS</u>, Chicago, IL <span class="pull-right">June 2012 - Present</span><br>
+						<small><i>Fast-growing architectural engineering firm with over 70 employees in multiple offices</i></small><br>
+						<strong>Information Technology Coordinator</strong><br>
+						<ul>
+							<li>Manage a budget of approximately $40,000 for purchasing hardware, network equipment and software for rebuilding the IT infrastructure</li>
+							<li>Rebuilt and manage the Windows Server 2012 and Exchange 2013 Organization, as well as maintain data backups with Symantec Backup Exec Server</li>
+							<li>Install, operate and monitor VMware virtualized servers, mid-range workstations, networked printers and other networking equipment</li>
+							<li>Manage and monitor the licensing of Autodesk products such as Revit and AutoCAD as well as Adobe Creative Suite, Google Sketchup and IESve</li>
+							<li>Provide recommendations on company technology purchases in an effort to increase the company’s efficiency while maintaining confidentiality with regards to critical company information being processed, stored and accessed</li>
+							<li>Serve as liaison between staff and technology department to resolve issues, provide administrative support and on-the-job training for new and existing department staff comprising of over 70 employees in three geographical locations</li>
+						</ul><br>
 
-Sea et tota denique gloriatur, cum cu maiorum philosophia, et nam nostro maluisset molestiae. Cum omnis illud malorum ei. Pro eu mundi appetere voluptatibus. Eu sit mollis admodum, vel agam urbanitas ea.</p>
+						<u>Office of Technology Services</u>, IIT, Chicago, IL <span class="pull-right">March 2012 - June 2012</span><br>
+						<strong>OTS Support Desk Assistant</strong><br>
+						<ul>
+							<li>Served as the front-line technical assistance to the IIT community</li>
+							<li>Provided troubleshooting and administrative support to students, staff, faculty and alumni with personal system account, networking or technical equipment problems.</li>
+						</ul><br>
+
+						<u>Supreme Engineering Services</u>, Vieux-Fort, St. Lucia <span class="pull-right">September 2009 - August 2010</span><br>
+						<strong>Engineering Technician</strong><br>
+						<ul>
+							<li>Worked alongside and assisted a team of highly trained IT professionals in the repair and building of desktop computers as well as the repair of laptop computers</li>
+							<li>Installed networking systems along with a team of well-coordinated professionals</li>
+							<li>Designed and coordinated a maintenance schedule for a team of elevator repair technicians, inclusive of myself, while managing a high-volume workload in a deadline-driven environment</li>
+							<li>Routinely handled numerous customer contacts daily with customer inquiries, billing information, product sales and balancing sales reports</li>
+						</ul><br>
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" href="#collapseFour">
+							Technical Skills
+						</a>
+					</h4>
+				</div>
+				<div id="collapseFour" class="panel-collapse collapse">
+					<div class="panel-body">
+						<ul>
+							<li>Operating Systems: <strong>Windows/ Mac/ Linux</strong></li>						
+							<li>Software: <strong>Microsoft Office, Expression Design</strong></li>
+							<li>Programming Languages: <strong>C++, Java, HTML5/CSS3, XML, JSON; Novice in SQL, PHP, Ruby on Rails, JavaScript</strong></li>
+							<li>Interests: <strong>Web Development (Ruby on Rails), Virtualization, Mobile Application Development</strong></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						<a data-toggle="collapse" href="#collapseFive">
+							Awards
+						</a>
+					</h4>
+				</div>
+				<div id="collapseFive" class="panel-collapse collapse">
+					<div class="panel-body">
+						<ul>
+							<li><strong>School of Applied Technology Dean's List</strong> <span class="pull-right">Fall 2010, Spring 2011, Fall 2011, Spring 2012</span></li>
+							Illinois Institute of Technology
+							<li><strong>Academic Award for Excellence</strong> – Information Technology and Management<span class="pull-right">Fall 2011</span></li>
+							National Society of Black Engineers - Illinois Institute of Technology Chapter
+							<li><strong>Presidential Scholarship</strong><span class="pull-right">August 2010</span></li>
+							Illinois Institute of Technology
+							<li><strong>Academic Award for Excellence</strong><span class="pull-right">May 2009</span></li>
+							Sir Arthur Lewis Community College
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
