--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 	<%= stylesheet_link_tag "application", 'http://fonts.googleapis.com/css?family=Oswald:400,700,300', :media => "all" %>
 	<%= stylesheet_link_tag "application", 'http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic', :media => "all" %>	
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	<%= stylesheet_link_tag "application", '//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css', :media => "all" %>
 	<%= csrf_meta_tags %>
 	
 	<%= render 'layouts/shim' %>
