Finish SEO meta tags

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'About Me') %>
+<% meta_description "Who is Sherman St. Hill? Interested in knowing more about Sherman St. Hill, then visit his About Me page to find out more." %>
 
 <h1>About Me</h1>
 <p>Lorem ipsum dolor sit amet, cu vim dignissim evertitur. Vitae virtute dolores an ius, ad erat tritani duo. Mazim utamur no duo, ius an probo deterruisset. Ex nam modus voluptatum conclusionemque, te eum assum molestiae.
