--- a/app/views/static_pages/resume.html.erb
+++ b/app/views/static_pages/resume.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Resume') %>
+<% meta_description "Resume of a versatile and highly motivated IT professional with an appetite for new challenges." %>
 
 <div class="resume_page">
 	<h1 class=".hidden-print">Resume</h1>
