--- a/app/views/inquiries/new.html.erb
+++ b/app/views/inquiries/new.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'Contact Me') %>
+<% meta_description "Contact Sherman about any interests in his work or potential opportunites or to simply network." %>
 
 <h1>Contact Me</h1>
 <%= render 'shared/form', :inquiry => @inquiry %>
