--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'My Projects') %>
+<% meta_description "View projects that Sherman St. Hill has accomplished, been part of or is currently involved in." %>
 
 <h1>My Projects</h1>
+
 <p>Lorem ipsum dolor sit amet, cu vim dignissim evertitur. Vitae virtute dolores an ius, ad erat tritani duo. Mazim utamur no duo, ius an probo deterruisset. Ex nam modus voluptatum conclusionemque, te eum assum molestiae.
 
 Pri graece gubergren eu. Iuvaret liberavisse ei pri. Eu vix nibh malorum, at augue maiestatis pri. Homero vivendo cu mel, latine denique atomorum nam in, sed solum dicat docendi an.
