Filling in Projects page unfinished

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for (@inquiry) do |f| %>
 <%= render 'shared/error_messages', object: @inquiry %>
 
-<fieldset>
+<!-- <fieldset> -->
 
 	<legend>Let's Network</legend><br>
 	<div class="form-group clearfix">
@@ -48,7 +48,7 @@
 		<%= f.submit "Send", :class => "btn btn-primary btn-lg" %>
 	</div>
 
-</fieldset>
+<!-- </fieldset> -->
 
 <% end %>
 </div>
