--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="home_page">
-	<div class="col-xs-12 col-sm-4 col-md-4 profile_pic">
+	<div class="col-xs-10 col-sm-4 col-md-4 profile_pic">
 	<%= image_tag("downtown.png", :alt => "Sherman St Hill", :class => "img-responsive img-thumbnail")  %>
 	</div>
-	<div class="col-xs-12 col-sm-8 col-md-8">
-		<div class="center jumbotron">
+	<div class="col-xs-8 col-sm-6 col-md-8">
+		<div class="jumbotron center">
 			<h1>Sherman St. Hill</h1>
 			<h3>I am a start-up web developer who prides on simplistic design....</h3>
 		</div>
