--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -3,10 +3,29 @@
 
 <h1>My Projects</h1>
 
-<p>Lorem ipsum dolor sit amet, cu vim dignissim evertitur. Vitae virtute dolores an ius, ad erat tritani duo. Mazim utamur no duo, ius an probo deterruisset. Ex nam modus voluptatum conclusionemque, te eum assum molestiae.
+<div class="media well">
+	<%= link_to image_tag("project-logo.png", alt: "Sherman St. Hill Portfolio", class: "media-object"), '#', class: "pull-left", :"data-toggle" => "modal", :"data-target" => "#myModal" %>
 
-Pri graece gubergren eu. Iuvaret liberavisse ei pri. Eu vix nibh malorum, at augue maiestatis pri. Homero vivendo cu mel, latine denique atomorum nam in, sed solum dicat docendi an.
+	<div class="media-body">
+		<h4 class="media-heading"><strong>Portfolio Website</strong></h4>
+		This portfolio website project was started on December 24th 2013. It 
+	</div>
+</div><br><br>
 
-Tale ornatus erroribus ne his, ei noster instructior pri. Vel ut iudico appellantur, ancillae perpetua vim ex. Vide etiam inciderint vel ei. Vim commodo appetere fabellas ne, sea at vide referrentur voluptatibus. Impetus bonorum ex sea, debet laoreet tibique ea has, an sonet accusata pro.
-
-Sea et tota denique gloriatur, cum cu maiorum philosophia, et nam nostro maluisset molestiae. Cum omnis illud malorum ei. Pro eu mundi appetere voluptatibus. Eu sit mollis admodum, vel agam urbanitas ea.</p>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel"><strong>Sherman St. Hill Portfolio Website</strong></h4>
+			</div>
+			<div class="modal-body">
+				<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
