--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-inverse navbar-default" role="navigation">
 <div class="container">
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-menu-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -11,7 +11,7 @@
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  <div class="collapse navbar-collapse" id="navigation-menu-1">
     <ul class="nav navbar-nav navbar-right">
       <%= nav_link "home", root_path %>
       <%= nav_link "about me", about_path %>
@@ -22,3 +22,4 @@
   </div><!-- /.navbar-collapse -->
   </div><!-- container -->
 </nav>
+
