--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -8,7 +8,8 @@
 
 	<div class="media-body">
 		<h4 class="media-heading"><strong>Portfolio Website</strong></h4>
-		This portfolio website project was started on December 24th 2013. It 
+		This portfolio website project was started on December 24th 2013. The purpose of this portfolio is
+		to give an insight into my skills and experience.
 	</div>
 </div><br><br>
 
@@ -21,7 +22,8 @@
 				<h4 class="modal-title" id="myModalLabel"><strong>Sherman St. Hill Portfolio Website</strong></h4>
 			</div>
 			<div class="modal-body">
-				<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+				<p>This portfolio website project was started on December 24th 2013. The purpose of this portfolio is to give an insight into my skills and experience. 
+				</p>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
